Date	Added

2011/12/24
	* Rev. 15040 Updates to log_athena.conf [Ai4rei]
	- Setting 'enable_logs' is now a pure bitmask and no longer affects misc-logs (branch, zeny etc). Meaning of most bits changed, revise your log configuration before starting the server.
	- Where applicable, settings support hexadecimal and boolean values instead of only integers.
2011/12/19
	* Rev. 15036 Updates to log_athena.conf [Ai4rei]
	- Changed meaning of 'log_chat' bits (shift to right by one, &64 bit removed, 1 no longer means 'all').
	- Added option 'log_chat_woe_disable' which replaces &64 log_chat bit.
2011/10/15
	* Rev. 14972 Updated misleading comment in conf/mapflag/partylock.txt (bugreport:4930, since r14092). [Ai4rei]
2011/08/21
	* Rev. 14938 Added setting 'client_limit_unit_lv' to control the unit types which are affected by 'max_lv' and 'aura_lv' settings. [Ai4rei]
2011/07/09
	* Rev. 14892 Removed 'msg_athena.conf' messages 619 and 620 (duplicates to 572 and 573) (since r5506). [Ai4rei]
2011/05/13
	* Rev. 14812 Added settings 'cashshop_show_points' and 'mail_show_status', both disabled by default, as the messages they control are custom (follow up to r11548 and r12264). [Ai4rei]
	- Moved custom cash point update messages to 'msg_athena.conf' (IDs 504~506).
2011/03/15
	* Rev. 14744 Fixed option 'monster_ai' referring to setting 'mob_npc_warp' rather than 'mob_warp' (follow up to r8135). [Ai4rei]
2011/03/06
	* Rev. 14732 Added search store info related settings. [Ai4rei]
2011/02/23
	* Rev. 14724 Made autotrade error message store type-neutral, as it is used for buying stores now as well. [Ai4rei]
2011/02/19
	* Rev. 14713 Added map-server feature settings file 'battle/feature.conf'. [Ai4rei]
	- Added setting 'feature.buying_store' to enable/disable the buying store system.
2011/02/15
	* Rev. 14707 Added map-server battle setting 'gm_check_minlevel'. [Ai4rei]
2011/02/06
	* Rev. 14700 Added char-server setting 'char_del_delay'. [Ai4rei]
2011/01/13