@@ -117,48 +117,36 @@ log_chat: 0
 // Disable chat logging when WoE is running? (Note 1)
 log_chat_woe_disable: no
 
-// Dead Branch Log Table
-log_branch_db: branchlog
+// Logging tables/files
+// Following settings specify where to log to. If 'sql_logs' is
+// enabled, SQL tables are assumed, otherwise flat files.
 
-// Drops & Pickups Table
-log_pick_db: picklog
+// Dead Branch Log
+log_branch_db: log/branchlog.log
+//log_branch_db: branchlog
 
-// Zeny Table
-log_zeny_db: zenylog
+// Drops & Pickups
+log_pick_db: log/picklog.log
+//log_pick_db: picklog
 
-// MVP Drop Table
-log_mvpdrop_db: mvplog
+// Zeny
+log_zeny_db: log/zenylog.log
+//log_zeny_db: zenylog
 
-// GM Log Table
-log_gm_db: atcommandlog
+// MVP Drops
+log_mvpdrop_db: log/mvplog.log
+//log_mvpdrop_db: mvplog
 
-// NPC Log Table
-log_npc_db: npclog
+// GM Log
+log_gm_db: log/atcommandlog.log
+//log_gm_db: atcommandlog
 
-// CHAT Log Table
-log_chat_db: chatlog
+// NPC Log
+log_npc_db: log/npclog.log
+//log_npc_db: npclog
 
-
-// Dead Branch Log File
-log_branch_file: log/branchlog.log
-
-// Drops & Pickups Log File
-log_pick_file: log/picklog.log
-
-// Zeny Log File
-log_zeny_file: log/zenylog.log
-
-// MVP Drop File
-log_mvpdrop_file: log/mvplog.log
-
-// GM Log File
-log_gm_file: log/atcommandlog.log
-
-// NPC Log File
-log_npc_file: log/npclog.log
-
-// CHAT Log File
-log_chat_file: log/chatlog.log
-
+// CHAT Log
+log_chat_db: log/chatlog.log
+//log_chat_db: chatlog
 
 import: conf/import/log_conf.txt
